# ceph

./: .gitmodules  CMakeLists.txt  README.windows.rst  win32_build.sh  win32_deps_build.sh
cmake/modules/: BuildRocksDB.cmake  CephChecks.cmake  FindBoost.cmake
cmake/toolchains/: mingw32.cmake
src/: CMakeLists.txt  ceph_fuse.cc
src/auth/: AuthRegistry.cc  Crypto.cc  Crypto.h  KeyRing.cc
src/client/: CMakeLists.txt  Client.cc  Inode.h  fuse_ll.cc  posix_acl.h
src/cls/: CMakeLists.txt
src/common/: CMakeLists.txt  ConfUtils.cc  HeartbeatMap.cc  LogEntry.cc  OutputDataSocket.cc  PluginRegistry.cc  PluginRegistry.h  SubProcess.cc  SubProcess.h  TracepointProvider.cc  TracepointProvider.h  addr_parsing.c  address_helper.cc  admin_socket.cc  admin_socket_client.cc  armor.c  blkdev_win32.cc  buffer.cc  ceph_context.h  ceph_fs.cc  ceph_time.h  code_environment.cc  compat.cc  config.cc  config_proxy.h  dlfcn_win32.cc  dns_resolve.cc  dns_resolve.h  dns_resolve_win32.cc  dout.h  entity_name.h  errno.cc  errno.h  hostname.cc  ifaddrs.c  ifaddrs_win32.c  ipaddr.cc  ipaddr_win32.cc  module.c  ns_initparse.c  (+22 more)
src/crush/: CrushCompiler.cc
src/dokan/: CMakeLists.txt  README.md  ceph_dokan.c  ceph_dokan.cc  ceph_dokan.h  dbg.c  dbg.cc  dbg.h  options.cc  posix_acl.cc  posix_acl.h  utils.c  utils.cc  utils.h
src/erasure-code/: CMakeLists.txt  ErasureCodePlugin.cc  ErasureCodePlugin.h
src/global/: CMakeLists.txt  global_init.cc  pidfile.cc  signal_handler_win32.cc
src/include/: buffer.h  ceph_assert.h  compat.h  denc.h  dlfcn_compat.h  encoding.h  err.h  free_override.h  mempool.h  msgr.h  random.h  sock_compat.h  sock_types.h  statlite.h  types.h  utime.h
src/json_spirit/: CMakeLists.txt
src/kv/: MemDB.cc  RocksDBStore.cc
src/librados/: CMakeLists.txt  librados_c.cc  librados_cxx.cc
src/libradosstriper/: RadosStriperImpl.cc
src/librbd/: CMakeLists.txt  ManagedLock.cc  ObjectMap.cc  Utils.cc  internal.cc
src/log/: Log.cc  Log.h
src/mds/: CDentry.h  CInode.h  LocalLockC.h  Locker.cc  Locker.h  MDSDaemon.cc  Server.cc  journal.cc  mdstypes.h
src/messages/: MStatfs.h
src/mon/: MonClient.cc
src/msg/: CMakeLists.txt  Message.cc  Messenger.cc  msg_types.cc  msg_types.h
src/os/: CMakeLists.txt  ObjectStore.h
src/osd/: CMakeLists.txt  ClassHandler.cc  (+2 more)
src/tools/rbd_nbd/: CMakeLists.txt  nbd-server.cc  nbd-server.h  nbd-win32.h  rbd-nbd-win32.cc  rbd-nbd.cc  wnbd.h  wnbd_ioctl.c  wnbd_ioctl.h  wnbd_wmi.cc  wnbd_wmi.h  wnbdspintf.h  wnbdvmcfg.h  wnbdvmdebug.h  wnbdvminiptioctl.h  wnbdvmuserintf.h  wnbdvmuserioctl.h
src/tools/rbd_nbd/win32/: nbd.h  rbd-nbd.cc  rbd-nbd.h  wnbd_ioctl.cc  wnbd_ioctl.h  wnbd_shared.h  wnbd_wmi.cc  wnbd_wmi.h
src/tools/rbd_wvbd/: CMakeLists.txt  rbd_wvbd.cc  rbd_wvbd.h  wvbd_handler.cc  wvbd_handler.h
(+104 files in other folders)
